tests/ui/proc-macro/derive-helper-legacy-spurious.stderr
error: cannot find attribute `dummy` in this scope
  --> $DIR/derive-helper-legacy-spurious.rs:3:4
   |
LL | #![dummy]
   |    ^^^^^

error: cannot find attribute `empty_helper` in this scope
  --> $DIR/derive-helper-legacy-spurious.rs:9:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^
   |
help: `empty_helper` is an attribute that can be used by the derive macro `Empty`, you might be missing a `derive` attribute
   |
LL + #[derive(Empty)]
LL | struct Foo {}
   |

error: aborting due to 2 previous errors

